--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@ text-align: center;
 
 color: #173654;
 
+font-size: 2em;
+
 background-color: #ffffff;
 
 font-family: 'Lato, sans-serif;
 
 }
+
 
 .box{
 
