--- a/firstday.html
+++ b/firstday.html
@@ -12,7 +12,7 @@ text-align: center;
 text-transform: lowercase;
 font-family: 'Lato, sans-serif;
 font-size: 12 em;
-letter-spacing: 5px;">Nursing Orientation In...
+letter-spacing: 5px;">first day of school...
 
 </h1>
 </p>
@@ -100,7 +100,7 @@ top: 2%;
 </body>
 <script>
 const year = new Date().getFullYear();
-const myDate = new Date('Dec 17, 2020 10:00:00');
+const myDate = new Date('Jan 18, 2020 8:30:00');
 console.log(myDate);
 
 // countdown
